--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,7 @@ name = pnu_strings
 description = print the strings of printable characters in files
 long_description = file: README.md
 long_description_content_type = text/markdown
-version = 1.0.1
+version = 1.1.0
 license = BSD 3-Clause License
 license_files = License
 author = Hubert Tournier
@@ -34,6 +34,7 @@ classifiers =
     Programming Language :: Python :: 3.8
     Programming Language :: Python :: 3.9
     Programming Language :: Python :: 3.10
+    Topic :: Security
     Topic :: Software Development :: Libraries :: Python Modules
     Topic :: System
     Topic :: Utilities
@@ -54,4 +55,6 @@ console_scripts =
 [options.data_files]
 man/man1 = 
     man/strings.1.gz
+man/man3 = 
+    man/strings.3.gz
 
