--- a/src/strings/Makefile
+++ b/src/strings/Makefile
@@ -1,5 +1,4 @@
 NAME=strings
-SECTION=1
 SOURCES=main.py
 DESTROOTDIR=/usr/local
 
@@ -43,16 +42,21 @@ checks: check-code check-security check-unused check-version check-sloc
 format: /usr/local/bin/black
 	black ${SOURCES}
 
-${NAME}.${SECTION}.gz: ../../man/${NAME}.${SECTION}
-	@gzip -k9c ../../man/${NAME}.${SECTION} > ${NAME}.${SECTION}.gz
+${NAME}.1.gz: ../../man/${NAME}.1
+	@gzip -k9c ../../man/${NAME}.1 > ${NAME}.1.gz
 
-install: ${NAME}.${SECTION}.gz
+${NAME}.3.gz: ../../man/${NAME}.3
+	@gzip -k9c ../../man/${NAME}.3 > ${NAME}.3.gz
+
+install: ${NAME}.1.gz ${NAME}.3.gz
 	install -m 0755 -o root -g wheel main.py ${DESTROOTDIR}/bin/${NAME}
-	install -m 0644 -o root -g wheel ${NAME}.${SECTION}.gz ${DESTROOTDIR}/man/man${SECTION}
+	install -m 0644 -o root -g wheel ${NAME}.1.gz ${DESTROOTDIR}/man/man1
+	install -m 0644 -o root -g wheel ${NAME}.3.gz ${DESTROOTDIR}/man/man3
 
 uninstall:
 	rm -f ${DESTROOTDIR}/bin/${NAME}
-	rm -f ${DESTROOTDIR}/man/man${SECTION}/${NAME}.${SECTION}.gz
+	rm -f ${DESTROOTDIR}/man/man1/${NAME}.1.gz
+	rm -f ${DESTROOTDIR}/man/man3/${NAME}.3.gz
 
 whatis:
 	makewhatis
@@ -61,7 +65,7 @@ love:
 	@echo "Not war!"
 
 clean:
-	@rm -f ${NAME}.${SECTION}.gz
+	@rm -f ${NAME}.1.gz ${NAME}.3.gz
 
 distclean: clean
 
