--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,7 @@ name = pnu_strings
 description = print the strings of printable characters in files
 long_description = file: README.md
 long_description_content_type = text/markdown
-version = 1.1.1
+version = 1.1.2
 license = BSD 3-Clause License
 license_files = License
 author = Hubert Tournier
@@ -11,7 +11,7 @@ author_email = nobody@nowhere.invalid
 url = https://github.com/HubTou/strings/
 project_urls =
     Bug Tracker = https://github.com/HubTou/strings/issues
-keywords = pnu-project
+keywords = pnu-project, unix
 classifiers =
     Development Status :: 5 - Production/Stable
     Environment :: Console
